# torpor

./: CMakeLists.txt  LICENSE  README.md
common/include/: cuda_common.hpp  safe_ptr.hpp  socket_helper.hpp  types.hpp  utils.hpp
dockerfiles/: client.Dockerfile  native.Dockerfile
evaluation/figure10/: Figure10_README.md
evaluation/figure11/: Figure11_README.md  README.md  figure11_analyze_router_log.py
evaluation/figure6/: Figure6_README.md
evaluation/figure7/: Figure7_README.md
evaluation/figure8/: Figure8_README.md
evaluation/figure9/: Figure9_README.md
evaluation/table4/: README.md
evaluation2/figure10/: README.md  baseline_keepalive.py  baseline_native.py  figure10_analyze_router_log.py  run_figure10_ka.sh  run_figure10_native.sh  run_figure10_torpor.py  sender_from_trace.py
evaluation2/table4/: GPU_remoting_latency.py  README.md  controller.hpp  run_figure4_GPU_remoting.sh  run_figure4_native.py  signal_pb2.py  (+2 more)
proto/: cudarpc.proto  signal.proto
scripts/: baseline_keepalive.py  baseline_native.py  compile.sh  router.py  sender_fix_rate.py  sender_from_trace.py
src/: CMakeLists.txt
src/client/: CMakeLists.txt  driver.cpp  runtime.cpp
src/server/: CMakeLists.txt  kernel_lookup.cpp  server.cpp
tests/: bert.py  endpoint.py  internel_many2one.py
tools/: bert_cublas.txt  conv_cudnn_cudnn.txt  export_keepalive.py  invoc_pattern.txt  mat_all.txt  mat_cuda.txt  node_simu.py  node_simu_script.sh  parse_all_api.py  parse_cuda_api.py  parse_cudnn_api.py  profile_con.py  profile_cuda_log.py  res_kernel_kernel.txt  resnet_cuda.txt  vgg_all.txt
(+63 files in other folders)
